--- a/frontend/src/editor/editor.html
+++ b/frontend/src/editor/editor.html
@@ -552,6 +552,14 @@
       
                         <input type="number" class="form_input_number" v-model="editingFrameEvent.layoutOptions.rotateOriginY" required>
                       </div>
+
+                      <div class="form_row">
+                        <div class="form_row_label">
+                          透明度
+                        </div>
+      
+                        <input type="number" class="form_input_number" v-model="editingFrameEvent.layoutOptions.opacity" required>
+                      </div>
                     </div>
                   </template>
 
