--- a/frontend/src/preview/preview.html
+++ b/frontend/src/preview/preview.html
@@ -21,7 +21,8 @@
 
       #userVars {
         width: 400px;
-        height: 250px;
+        height: 300px;
+        font-size: 10px;
       }
     </style>
   </head>
