--- a/frontend/src/player/player.html
+++ b/frontend/src/player/player.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script type="text/javascript">window.workspace_json = <%= JSON.stringify(htmlWebpackPlugin.options.workspace_json) %></script>
+    <meta charset="utf-8">
     <title>プレイヤー</title>
     <style>
       * {
