--- a/frontend/src/player/player.html
+++ b/frontend/src/player/player.html
@@ -18,11 +18,29 @@
       .player_root {
         margin: 12px;
       }
+      .info {
+        text-align: center;
+        font-size: 12px;
+        margin: 28px;
+      }
+      .info a {
+        color: #aaa;
+      }
     </style>
   </head>
   <body>
     <div class="layout">
-      <div id="root" class="player_root"></div>
+      <div>
+        <div id="root" class="player_root"></div>
+        <div class="info">
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSeSoh16hl58ROD5Mi7hSNwd94c29gcrk7F8Q1BgNHsDYTjwsA/viewform?usp=sf_link"
+            target="_blank"
+            rel="noopener"
+            >バグ報告・出題内容の提案などお問い合わせはこちら</a
+          >
+        </div>
+      </div>
     </div>
   </body>
 </html>
