:heavy_plus_sign: 追加

--- a/frontend/src/editor/editor.html
+++ b/frontend/src/editor/editor.html
@@ -871,8 +871,9 @@
           <button @click="clickCopyFrameEvent" :disabled="!selectedFrameEvent">コピー</button>
           <button @click="openPreview()">プレビュー</button>
           アセット：
-          <button @click="clickAddTextAsset()" @click="clickAddTextAsset">テキストを追加</button>
-          <button @click="clickAddImageAsset()" @click="clickAddImageAsset">画像を追加</button>
+          <button @click="clickAddTextAsset">テキストを追加</button>
+          <button @click="clickAddImageAsset">画像を追加</button>
+          <button @click="clickAddAudioAsset">音声を追加</button>
           <button @click="clickEditAsset()" :disabled="!selectedAssetId">編集</button>
           <button @click="clickDeleteAsset()" :disabled="!selectedAssetId">削除</button>
           作業：
