--- a/frontend/src/editor/editor.html
+++ b/frontend/src/editor/editor.html
@@ -918,23 +918,25 @@
                 </template>
 
                 <template v-if="editingFrameEvent.type === 'putAudio' && editingFrameEvent.putAudio">
-                  <div class="form_row">
-                    <div class="form_row_label">
-                      音量
-                    </div>
-  
-                    <input type="number" class="form_input_number" v-model="editingFrameEvent.putAudio.volume" required>
-                  </div>
-
-                  <div class="form_row">
-                    <div class="form_row_label">
-                      配置と同時に再生開始
+                  <div class="form_columns_row">
+                    <div class="form_row">
+                      <div class="form_row_label">
+                        音量
+                      </div>
+    
+                      <input type="number" class="form_input_number" v-model="editingFrameEvent.putAudio.volume" required min="0" max="1" step="0.01">
                     </div>
 
-                    <select class="form_select" v-model="editingFrameEvent.putAudio.autoplay" required>
-                      <option value="true">有効</option>
-                      <option value="false">無効</option>
-                    </select>
+                    <div class="form_row">
+                      <div class="form_row_label">
+                        配置と同時に再生開始
+                      </div>
+
+                      <select class="form_select" v-model="editingFrameEvent.putAudio.autoplay" required>
+                        <option value="true">有効</option>
+                        <option value="false">無効</option>
+                      </select>
+                    </div>
                   </div>
 
                   <div class="form_columns_row">
