--- a/frontend/src/editor/editor.html
+++ b/frontend/src/editor/editor.html
@@ -937,6 +937,14 @@
                         <option value="false">無効</option>
                       </select>
                     </div>
+
+                    <div class="form_row">
+                      <div class="form_row_label">
+                        再生開始位置
+                      </div>
+    
+                      <input type="number" class="form_input_number" v-model="editingFrameEvent.putAudio.initialPosition" required min="0" step="0.01">
+                    </div>
                   </div>
 
                   <div class="form_columns_row">
